# GSG-2.0

./: CMakeLists.txt  JSONParser.hpp  README.md  backTesting.cpp  backTesting.hpp  data.cpp  data.hpp  indicators.cpp  indicators.hpp  liveTesting.cpp  liveTesting.hpp  liveTrades.cpp  liveTrades.hpp  main.cpp  processes.cpp  processes.hpp  responseConstructor.cpp  responseConstructor.hpp  signature.hpp  strategies.cpp  strategies.hpp
.github/workflows/: cmake.yml
